Group creation fix